--- a/app/src/main/res/layout/fragment_contract_details_child.xml
+++ b/app/src/main/res/layout/fragment_contract_details_child.xml
@@ -173,7 +173,7 @@
                 android:layout_height="match_parent"
                 android:layout_marginVertical="8dp"
                 app:cardCornerRadius="10dp"
-                android:layout_marginStart="15dp"
+                android:layout_marginStart="10dp"
                 android:layout_marginEnd="2dp"
                 app:cardElevation="1dp"
                 app:layout_constraintTop_toBottomOf="@id/cT"
@@ -195,6 +195,7 @@
             </androidx.cardview.widget.CardView>
 
             <TextView
+                android:id="@+id/contr"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="30dp"
@@ -205,6 +206,104 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/cardET" />
 
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_marginTop="15dp"
+                android:layout_marginStart="10dp"
+                app:layout_constraintStart_toStartOf="@id/contr"
+                app:layout_constraintTop_toBottomOf="@id/contr">
+
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/selectCard"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:cardCornerRadius="8dp"
+                    app:cardElevation="0dp"
+                    android:background="@color/grey10">
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@color/grey10"
+                        android:paddingHorizontal="6dp"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/selectPDF"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textSize="@dimen/H4"
+                            android:padding="4dp"
+                            android:maxWidth="250dp"
+                            android:text="Select Contract PDF"
+                            android:fontFamily="@font/roboto_medium"/>
+
+                    </LinearLayout>
+
+                </androidx.cardview.widget.CardView>
+
+                <LinearLayout
+                android:id="@+id/pdfCard"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginTop="15dp"
+                android:visibility="gone"
+                android:layout_gravity="center_vertical"
+                android:gravity="center_vertical"
+                app:layout_constraintStart_toStartOf="@id/contr"
+                app:layout_constraintTop_toBottomOf="@id/contr">
+
+                <androidx.cardview.widget.CardView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:cardCornerRadius="8dp"
+                    app:cardElevation="0dp"
+                    android:background="@color/grey10">
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@color/grey10"
+                        android:paddingHorizontal="6dp"
+                        android:orientation="horizontal">
+                        <TextView
+                            android:id="@+id/pdfName"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textSize="@dimen/H4"
+                            android:padding="4dp"
+                            android:maxWidth="250dp"
+                            android:fontFamily="@font/roboto"
+                            android:text="Tata Contract"/>
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textSize="@dimen/H4"
+                            android:padding="4dp"
+                            android:layout_marginStart="8dp"
+                            android:maxWidth="250dp"
+                            android:text="View"
+                            android:fontFamily="@font/roboto_medium"/>
+
+                    </LinearLayout>
+
+                </androidx.cardview.widget.CardView>
+
+                <ImageView
+                    android:id="@+id/deletePdf"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:src="@drawable/svg_delet"
+                    android:layout_marginStart="10dp"/>
+
+            </LinearLayout>
+
+            </LinearLayout>
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -214,7 +313,7 @@
             android:layout_marginEnd="20dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toEndOf="@id/addressLayoutF1"
-            app:layout_constraintBottom_toBottomOf="@id/addressLayoutF1"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent">
 
             <TextView
@@ -228,6 +327,15 @@
                 android:textSize="@dimen/H4"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
+
+            <ImageView
+                android:id="@+id/pdfPreview"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_margin="20dp"
+                android:scaleType="fitCenter"
+                app:layout_constraintTop_toBottomOf="@id/aT2"
+                app:layout_constraintBottom_toBottomOf="parent"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
