--- a/app/src/main/res/layout/fragment_stay_history_child.xml
+++ b/app/src/main/res/layout/fragment_stay_history_child.xml
@@ -3,12 +3,251 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".dashboard.configuration.CorporateRates.ViewCompany.StayHistoryChildFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:background="@color/white">
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/searchCard"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            style="@style/CardViewTheme"
+            app:cardCornerRadius="8dp"
+            app:cardElevation="4dp"
+            android:layout_margin="20dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:cardBackgroundColor="@color/white">
+
+            <EditText
+                android:id="@+id/search"
+                android:layout_width="@dimen/editTextWidth"
+                android:layout_height="40dp"
+                android:hint="Search"
+                android:textSize="@dimen/H4"
+                android:layout_marginStart="10dp"
+                android:drawablePadding="10dp"
+                android:drawableStart="@drawable/svg_search"
+                android:background="@null"/>
+
+        </androidx.cardview.widget.CardView>
+
+        <LinearLayout
+            android:id="@+id/ll5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center_vertical"
+            app:layout_constraintHorizontal_bias="0.02"
+            app:layout_constraintTop_toTopOf="@id/searchCard"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="@id/searchCard"
+            app:layout_constraintStart_toEndOf="@id/searchCard">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center_vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Filter"
+                    android:textSize="@dimen/H4"
+                    android:layout_marginHorizontal="5dp"
+                    android:textColor="@color/secondary"
+                    android:fontFamily="@font/roboto"/>
+
+                <ImageView
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:layout_marginHorizontal="2dp"
+                    android:src="@drawable/svg_filter"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginStart="10dp"
+                android:gravity="center_vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Sort"
+                    android:textSize="@dimen/H4"
+                    android:layout_marginHorizontal="5dp"
+                    android:textColor="@color/secondary"
+                    android:fontFamily="@font/roboto"/>
+
+                <ImageView
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:scaleType="fitXY"
+                    android:layout_marginHorizontal="2dp"
+                    android:src="@drawable/svg_sort"/>
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/allProp"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            style="@style/CardViewTheme"
+            android:layout_marginEnd="20dp"
+            android:layout_marginVertical="20dp"
+            android:visibility="visible"
+            app:cardCornerRadius="16dp"
+            app:cardElevation="4dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@id/searchCard"
+            app:layout_constraintTop_toBottomOf="@id/searchCard">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="20dp"
+                android:orientation="vertical">
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/items_linear"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginHorizontal="10dp"
+                    android:paddingVertical="10dp">
+
+                    <TextView
+                        android:id="@+id/shortCode"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="10dp"
+                        style="@style/listTextHeading"
+                        android:text="Guest Name"
+                        app:layout_constraintEnd_toStartOf="@id/propertyName"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"/>
+
+                    <TextView
+                        android:id="@+id/propertyName"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        style="@style/listTextHeading"
+                        android:text="Employee ID"
+                        android:layout_marginStart="5dp"
+                        app:layout_constraintEnd_toStartOf="@id/guide1"
+                        app:layout_constraintStart_toEndOf="@id/shortCode"
+                        app:layout_constraintBottom_toBottomOf="@id/shortCode"
+                        app:layout_constraintTop_toTopOf="@id/shortCode"/>
+
+                    <androidx.constraintlayout.widget.Guideline
+                        android:id="@+id/guide1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        app:layout_constraintGuide_percent="0.3"/>
+
+                    <TextView
+                        android:id="@+id/bedType"
+                        android:layout_width="70dp"
+                        android:layout_height="wrap_content"
+                        style="@style/listTextHeading"
+                        android:text="Nights"
+                        android:layout_marginStart="5dp"
+                        app:layout_constraintEnd_toStartOf="@id/adultChild"
+                        app:layout_constraintStart_toEndOf="@id/guide1"
+                        app:layout_constraintBottom_toBottomOf="@id/shortCode"
+                        app:layout_constraintTop_toTopOf="@id/shortCode"/>
+
+                    <TextView
+                        android:id="@+id/adultChild"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        style="@style/listTextHeading"
+                        android:text="Check-in"
+                        android:layout_marginStart="5dp"
+                        app:layout_constraintEnd_toStartOf="@id/maxOccupancy"
+                        app:layout_constraintStart_toEndOf="@id/bedType"
+                        app:layout_constraintBottom_toBottomOf="@id/shortCode"
+                        app:layout_constraintTop_toTopOf="@id/shortCode"/>
+
+                    <TextView
+                        android:id="@+id/maxOccupancy"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        style="@style/listTextHeading"
+                        android:text="Check-out"
+                        android:layout_marginStart="5dp"
+                        app:layout_constraintEnd_toStartOf="@id/amenities"
+                        app:layout_constraintStart_toEndOf="@id/adultChild"
+                        app:layout_constraintBottom_toBottomOf="@id/shortCode"
+                        app:layout_constraintTop_toTopOf="@id/shortCode"/>
+
+                    <TextView
+                        android:id="@+id/amenities"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        style="@style/listTextHeading"
+                        android:text="Rate Plan"
+                        android:layout_marginStart="5dp"
+                        app:layout_constraintEnd_toStartOf="@id/text7"
+                        app:layout_constraintStart_toEndOf="@id/maxOccupancy"
+                        app:layout_constraintBottom_toBottomOf="@id/shortCode"
+                        app:layout_constraintTop_toTopOf="@id/shortCode"/>
+
+                    <TextView
+                        android:id="@+id/text7"
+                        android:layout_width="80dp"
+                        android:layout_height="wrap_content"
+                        style="@style/listTextHeading"
+                        android:text="Room No"
+                        android:layout_marginStart="5dp"
+                        app:layout_constraintEnd_toStartOf="@id/actions"
+                        app:layout_constraintStart_toEndOf="@id/amenities"
+                        app:layout_constraintBottom_toBottomOf="@id/shortCode"
+                        app:layout_constraintTop_toTopOf="@id/shortCode"/>
+
+                    <TextView
+                        android:id="@+id/actions"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        style="@style/listTextHeading"
+                        android:text="Actions"
+                        android:textAlignment="center"
+                        android:layout_marginStart="5dp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toEndOf="@id/text7"
+                        app:layout_constraintBottom_toBottomOf="@id/shortCode"
+                        app:layout_constraintTop_toTopOf="@id/shortCode"/>
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/grey5"
+                    app:layout_constraintTop_toBottomOf="@id/propertyName"/>
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recyclerView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    tools:listitem="@layout/item_stay_history"/>
+
+            </LinearLayout>
+
+        </androidx.cardview.widget.CardView>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </FrameLayout>
