--- a/app/src/main/res/layout/fragment_dashboard_mobile.xml
+++ b/app/src/main/res/layout/fragment_dashboard_mobile.xml
@@ -12,15 +12,27 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+            <TextView
+                android:id="@+id/txt_head"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginTop="8dp"
+                android:text="Today’s Overview"
+                android:textSize="@dimen/H5"
+                android:layout_marginHorizontal="12dp"
+                android:fontFamily="@font/roboto_medium"
+                android:textColor="@color/secondary"/>
     <androidx.cardview.widget.CardView
         android:id="@+id/cv1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/txt_head"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@id/cv3"
         android:layout_marginHorizontal="12dp"
-        android:layout_marginTop="6dp"
+        android:layout_marginTop="9dp"
         app:cardCornerRadius="6dp"
         app:cardElevation="6dp">
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -34,17 +46,20 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="5dp"
-            android:layout_marginStart="4dp"
+            android:layout_marginStart="7dp"
             android:text="Arrivals"
             android:fontFamily="@font/roboto_medium"
             android:textColor="@color/black"
             android:textSize="14sp"/>
 
         <TextView
+            android:id="@+id/txt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="@id/txt1"
             app:layout_constraintTop_toBottomOf="@id/txt1"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="9dp"
             android:text="41/62"
             android:layout_marginTop="3dp"
             android:textColor="@color/black"
@@ -53,9 +68,10 @@
                 android:layout_width="16dp"
                 android:layout_height="16dp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@id/txt1"
-                android:layout_marginEnd="4dp"
-                android:src="@drawable/svg_info"/>
+                app:layout_constraintBottom_toBottomOf="@id/txt1"
+                android:layout_marginBottom="-4dp"
+                android:layout_marginEnd="9dp"
+                android:src="@drawable/svg_nxt"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 
@@ -81,7 +97,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="5dp"
-            android:layout_marginStart="4dp"
+            android:layout_marginStart="7dp"
             android:text="Arrivals"
             android:fontFamily="@font/roboto_medium"
             android:textColor="@color/black"
@@ -92,6 +108,8 @@
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="@id/txt2"
             app:layout_constraintTop_toBottomOf="@id/txt2"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="9dp"
             android:text="41/62"
             android:layout_marginTop="3dp"
             android:textColor="@color/black"
@@ -100,9 +118,10 @@
                 android:layout_width="16dp"
                 android:layout_height="16dp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@id/txt2"
-                android:layout_marginEnd="4dp"
-                android:src="@drawable/svg_info"/>
+                app:layout_constraintBottom_toBottomOf="@id/txt2"
+                android:layout_marginBottom="-4dp"
+                android:layout_marginEnd="9dp"
+                android:src="@drawable/svg_nxt"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 
@@ -146,13 +165,24 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
-
+            <TextView
+                android:id="@+id/inv_overView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@id/cv3"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginTop="9dp"
+                android:layout_marginHorizontal="12dp"
+                android:text="Inventory Overview"
+                android:textSize="@dimen/H5"
+                android:textColor="@color/secondary"
+                android:fontFamily="@font/roboto_medium"/>
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cv4"
         android:layout_width="0dp"
         android:layout_height="190dp"
-        app:layout_constraintTop_toBottomOf="@id/cv3"
+        app:layout_constraintTop_toBottomOf="@id/inv_overView"
         android:layout_marginTop="9dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
